--- a/store/src/app/globals.css
+++ b/store/src/app/globals.css
@@ -8,6 +8,14 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+.box {
+  box-shadow: 0px 3px 20px #0000000b;
+  background-color: white;
+  border-color: transparent;
+  border-radius: 0.375rem;
+  position: relative;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
