--- a/store/src/styles/globals.css
+++ b/store/src/styles/globals.css
@@ -8,18 +8,20 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-.box {
-  box-shadow: 0px 3px 20px #0000000b;
-  background-color: white;
-  border-color: transparent;
-  border-radius: 0.375rem;
-  position: relative;
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
+}
+
+body {
+  color: rgb(var(--foreground-rgb));
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
 }
