--- a/store/src/pages/login/styles.module.css
+++ b/store/src/pages/login/styles.module.css
@@ -4,7 +4,10 @@
     @apply after:hidden after:xl:block after:content-[''] after:w-[57%] after:-mt-[20%] after:-mb-[13%] after:-ml-[23%] after:absolute after:inset-y-0 after:left-0 after:transform after:rotate-[-4.5deg] after:bg-primary after:rounded-[100%];
 
 }
-
 .login-box {
     @apply w-full px-5 py-8 mx-auto my-auto bg-white rounded-md shadow-md xl:ml-20  xl:bg-transparent sm:px-8 xl:p-0 xl:shadow-none sm:w-3/4 lg:w-2/4 xl:w-auto;
+}
+
+.login-title {
+    @apply text-2xl font-bold text-center xl:text-3xl xl:text-left;
 }
